--- a/basic-samples/container-crud/Cargo.toml
+++ b/basic-samples/container-crud/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-azure_data_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_data_cosmos" }
-azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_identity" }
-azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_core" }
+azure_data_cosmos = "0.22.0"
+azure_identity = "0.22.0"
+azure_core = "0.22.0"
 clap = { version = "4.3", features = ["derive"] }
 tracing = "0.1"  
 tokio = { version = "1", features = ["full"] }  # for async support
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
 serde_json = "1.0"                                  # For working with JSON data
-futures = "0.3"   
+futures = "0.3"     
